# DesafioCpp

./: .gitignore  CMakeLists.txt  README.md
ProjetoSDL/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  fighter.tga  fragment.fsh  main.cpp  render.cpp  render.h  tga.h  vertex.vsh
ProjetoSDL.xcodeproj/: project.pbxproj
ProjetoSDL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
resources/: basicShader.fs  basicShader.vs
source/: Camera.cpp  Camera.h  GameApp.cpp  GameApp.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  main.cpp
